@startuml
class User{
   -int id
   -bool isWork
   -QString lastName
   -QString firstName
   -QString patronymic
   -QString address
   -QString phone
   -QString branch
   -QString login
   -QString password
   -int role
}

class Contract{
   -int id
   -Date date
   -double insuranceSum
   -int typeInsurance
   -double tariffRate
   -int idClient
   -int idEmployee
   -int status
   -int idConfirmedAccountant
}

class ProfileWindow{
   +void LogoutButtonClicked()
   +void CancelButtonClicked()
}

class  LoginWindow{
   -Database db
   -void LoginButtonClicked()
   +void LoginSuccessful()
}

class TariffRateWindow{
   +void GetRateOne()
   +void GetRateTwo()
   +void GetRateThree()
   +void OkButtonClicked()
}

class ContractConfirmationWindow{
   -Contract currentContract
   +Contract GetCurrentContract()
   +QString GetComment()
   +void BackButtonClicked()
   +void ConfirmButtonClicked()
   +void RejectButtonClicked()
}

class ContractRenegotiateWindow{
   -Contract currentContract
   -Database db
   +void UpdataComments()
   +void ClearUi()
   +void BackButtonClicked()
   +void SendButtonClicked()
}

class AccountantStatisticsModel{
   +void UpdateModel()
   -void ResetSorting()
}

class AgentStatisticsModel{
   +void UpdateModel()
   -void ResetSorting()
}

class ChangeUserWindow{
   -User currentUser
   +User GetCurrentUser()
   +void BackButtonClicked()
   +void ConfirmButtonClicked()
}

class AbstractWindowForRole{
   +ProfileWindow profile
   +SidePanel messagePanel
   +void ShowMessage()
   +void Logout()
}

class WindowNavigator{
   -AbstractWindowForRole WindowForRole
   -LoginWindow loginWindow
   -Database db
   -void CreateAndShowLoginWindow()
   -void HideAndRemoveLoginWindow()
   -void HideAndRemoveRoleWindow()
   +void LoginSuccessful()
   +void Logout()
}

class Database {
   +void CreateTables()
   +Contract GetContractById()
   +User GetUserById()
   +bool ChangeContract()
   +bool UserVerify()
   +bool AddUser()
   +bool AddContract()
   +bool ChangeUser()
   +bool ConfirmationContract()
   +bool RenegotiateContract()
}

class AdminWindow{
   -Database db
   -ChangeUserWindow changeWindow
   -TableView viewUsers
   -void ShowViewUsers()
   -void ShowChangeUsers()
   -void UpdateViewUsers()
   -void ChangeUserBackButtonClicked()
   -void ChangeUserConfirmButtonClicked()
   -void DoubleClickedOnUser()
   -void RegistrationButtonClicked()
}

class AgentWindow{
   -Database db
   -ContractRenegotiateWindow renegotiateWindow
   -AgentStatisticModel statisticModel
   -TableView viewStatistic
   -TableView viewRenegotiateContract
   -ContractRenegotiateWindow renegotiateWidget
   +void ShowViewRenegotiate()
   +void ShowRenegotiateWidget()
   +void UpdateViewRenegotiate()
   -void DoubleClikedOnViewrenegotiate()
   -void RenegotiateWidgetBackButtonClicked()
   -void RenegotiateWidgetSendButtonClicked()
   -void ConcludeContractButtonClicked()
   -void HeaderInStatisticWidgetClicked()
}

class AccountantWindow{
   -Database db
   -TariffRateWindow tariffRate
   -ContractConfirmationWindow confirmWindow
   -TableView viewStatistics
   -TableView viewContracts
   -AccountantStatisticsModel statisticModel
   -void ShowViewContracts()
   -void ShowConfirmWindow()
   -void UpdateViewContracts()
   -void DoubleClikedOnContract()
   -void ConfirmWindowBackButtonClicked()
   -void ConfirmWindowConfirmButtonClicked()
   -void ConfirmWindowRejectButtonClicked()
}

AbstractWindowForRole <|-- AdminWindow
AbstractWindowForRole <|-- AgentWindow
AbstractWindowForRole <|-- AccountantWindow
AgentWindow o-- Database
AdminWindow o-- Database
AccountantWindow o-- Database
WindowNavigator o-- Database
WindowNavigator --> AbstractWindowForRole
WindowNavigator --> LoginWindow
AdminWindow --> ChangeUserWindow
AgentWindow --> ContractRenegotiateWindow
AgentWindow --> AgentStatisticsModel
AccountantWindow --> ContractConfirmationWindow
AccountantWindow --> TariffRateWindow
AccountantWindow --> AccountantStatisticsModel
AbstractWindowForRole --> ProfileWindow

ChangeUserWindow --> User

ContractRenegotiateWindow --> Contract
ContractRenegotiateWindow o-- Database
ContractConfirmationWindow --> Contract

LoginWindow o-- Database

@enduml